Add Odd_Even program and update VS Code settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,9 @@
     "java.project.sourcePaths": [
         ".",
         "Flowcharts & Pseudocodes",
-        "Variables & Data Types"
+        "Variables & Data Types",
+        "Conditional Statement",
+        "Operators"
     ],
     "java.project.referencedLibraries": []
 }
